compiler/tests/en/errors/no_field.salam
// EXPECT: E016
struct P:
    x : int = 0
end

func main:
    p : P = P {}
    __ p.q
end
